println nightmare